Bug 483222 - Strange KCM message when there's a symlink pointing to a file that's not in the backup plan
Summary: Strange KCM message when there's a symlink pointing to a file that's not in t...
Status: RESOLVED FIXED
Alias: None
Product: kup
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Persson
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-03-11 11:27 UTC by Paul Worrall
Modified: 2024-03-17 19:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2024-03-11 11:27:30 UTC
STEPS TO REPRODUCE
Create a backup plan that includes a folder containing a symlink that points to a file that's not in the backup plan

OBSERVED RESULT
There's a warning message that says "The symbolic link <name> is currently included but it points to a file which is not: <symlink target> ..."

But the symbolic link _is_ pointing to the file it mentions.

EXPECTED RESULT
Probably the message should say the symbolic link points to the file <symlink target> which is not included in the backup plan ... etc.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.0.1
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2024-03-11 19:50:21 UTC
I've seen this too.
Comment 2 Simon Persson 2024-03-17 19:00:40 UTC
Git commit f705664ce437ca2a40b4a91dadc4c3fe1e700dfd by Simon Persson.
Committed on 17/03/2024 at 18:57.
Pushed by persson into branch 'master'.

Simplify warning text in KCM

There is no need to say that the symlink is included, it's implied by the
fact that a warning about it is displayed.

M  +4    -4    kcm/backupplanwidget.cpp

https://invent.kde.org/system/kup/-/commit/f705664ce437ca2a40b4a91dadc4c3fe1e700dfd