Simplify warning text in KCM

There is no need to say that the symlink is included, it's implied by the
fact that a warning about it is displayed.

BUG: 483222